<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_planner_viz</name>
  <version>0.0.1</version>
  <description>Visualization of RMF planners</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_fleet_adapter</depend>
  <depend>rmf_traffic</depend>
  <depend>SFML</depend>
  <depend>imgui_sfml</depend>
  <depend>fcl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

